# HabitTracker

./: .gitignore  README.md  index.html  styles.css
backend/: .gitignore  README.md  pyproject.toml  schema.sql  seed.sql
backend/app/: db.py  main.py  models.py
backend/app/routers/: checkins.py  dashboard.py  export.py  habits.py
backend/tests/: test_health.py
docs/: .gitkeep  01-brief.md  02-data-model.md  04-api.md  05-screens.md  06-retro.md  prompt-log.md
frontend/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  Nav.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/screens/: CheckinScreen.css  CheckinScreen.test.tsx  CheckinScreen.tsx  DashboardScreen.css  DashboardScreen.test.tsx  DashboardScreen.tsx  HistoryScreen.css  HistoryScreen.test.tsx  HistoryScreen.tsx  SettingsScreen.css  SettingsScreen.test.tsx  SettingsScreen.tsx
frontend/src/utils/: dates.ts
